--- a/SimpleProgressBarActivity/bin/AndroidManifest.xml
+++ b/SimpleProgressBarActivity/bin/AndroidManifest.xml
@@ -12,6 +12,17 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <activity android:name="com.pcs.simpleprogressbaractivity.SampleActivity">
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        
+        <activity android:name="com.pcs.simpleprogressbaractivity.EventActivity"
+            android:theme="@android:style/Theme.Dialog"
+            android:label="@string/event_des"></activity>
     </application>
 
 </manifest>
