--- a/SimpleProgressBarActivity/bin/AndroidManifest.xml
+++ b/SimpleProgressBarActivity/bin/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="8" />
+    <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
 
     <application
@@ -28,6 +29,9 @@
         <activity android:name="com.pcs.simpleprogressbaractivity.MenuStyleActivity"
             android:label="@string/menu_des"
             android:theme="@android:style/Theme.Dialog"></activity>
+        
+        <activity android:name="com.pcs.simpleprogressbaractivity.ContactsDisplayActivity"
+            android:label="@string/contacts_label"></activity>
     </application>
 
 </manifest>
