--- a/DatabaseDemoApplication/AndroidManifest.xml
+++ b/DatabaseDemoApplication/AndroidManifest.xml
@@ -18,6 +18,9 @@
        <category android:name="android.intent.category.LAUNCHER" />
    </intent-filter>
         </activity>
+        <activity android:name="com.pcs.databasedemoapplication.DataDisplayActivity"
+            android:label="@string/displayActivity"
+            android:theme="@android:style/Theme.Dialog"/>
     </application>
 
 </manifest>
